--- a/README
+++ b/README
@@ -58,6 +58,6 @@ Usage: maxsat2lp [file.cnf|file.wcnf|-]
 
 ### pb2lp
 
-Converter from .opb file to .lp file.
+Converter from .opb/.wbo file to .lp file.
 
-Usage: pb2lp [file.opb|-]
+Usage: pb2lp [--wbo] [file.opb|file.wbo|-]
